--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
     --v-dark-blue: hsl(237, 12%, 33%);
     --n-dark-blue: hsl(240, 6%, 50%);
     --l-blue:  hsl(240, 5%, 91%);
+    --white: #ffffff;
 }
 
 body {
@@ -54,7 +55,7 @@ body {
 /* Card Styles */
 .card {
     position: relative;
-    background-color: var(--l-blue);
+    background-color: var(--white);
     padding: 0;
     border-radius: 20px;
     width: 800px;
